--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,6 +41,11 @@
   flex: 1 1 auto;
 }
 
-.active-link {
-  background-color: mat-color(mat-palette($mat-indigo));
+.active-menu {
+  color: mat-color(mat-palette($mat-indigo));
+}
+
+a {
+  display: flex;
+  align-items: center;
 }
