fixed login refresh issue & disabled leaderboard on homepage for now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
       <mat-nav-list>
         <a mat-list-item [routerLinkActive]="['active-menu']"
           [routerLinkActiveOptions]="{exact: true}"
-          routerLink="/login">
+          routerLink="/">
           <mat-icon class="icon">home</mat-icon>Home
         </a>
         <a mat-list-item [routerLinkActive]="['active-menu']"
