Closes #5 Quest Approval/Rejection with email notification

--- a/src/app/ui/members-quest-approval/members-quest-approval.component.html
+++ b/src/app/ui/members-quest-approval/members-quest-approval.component.html
@@ -22,5 +22,5 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let quest; columns: displayedColumns;"
-    (click)="selectRow(quest)"></tr>
+    (click)="openDialog(quest)"></tr>
 </table>
