--- a/src/app/ui/player-quest/player-quest.component.html
+++ b/src/app/ui/player-quest/player-quest.component.html
@@ -1,5 +1,3 @@
-<p>
-  player-quest works!
-</p>
-
-<members-quest-approval></members-quest-approval>
+<div class="content">
+  <members-quest-approval></members-quest-approval>
+</div>
