--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,6 +7,10 @@ $app-accent: mat-palette($mat-pink);
 $app-warn: mat-palette($mat-red);
 $app-gray: mat-palette($mat-gray);
 $app-green: mat-palette($mat-green);
+$app-cyan: mat-palette($mat-cyan);
+$app-teal: mat-palette($mat-teal);
+$app-light-blue: mat-palette($mat-light-blue);
+$app-amber: mat-palette($mat-amber);
 
 // Create your Sass color vars (will be available in all the project)
 $primary: mat-color($app-primary);
@@ -14,3 +18,7 @@ $accent: mat-color($app-accent);
 $warn: mat-color($app-warn);
 $gray: mat-color($app-gray);
 $green: mat-color($app-green);
+$cyan: mat-color($app-cyan);
+$teal: mat-color($app-teal);
+$light-blue: mat-color($app-light-blue);
+$amber: mat-color($app-amber);
