PlayerProfile: Assign Custom Quest
initial commit for the player assigne custom quest

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,8 +31,16 @@
           <mat-icon class="icon">home</mat-icon>Home
         </a>
         <a mat-list-item [routerLinkActive]="['active-menu']"
-          routerLink="/profile">
-          <mat-icon class="icon">person</mat-icon>Profile
+          routerLink="/profile/">
+          <mat-icon class="icon">person</mat-icon>Ge
+        </a>
+        <a mat-list-item [routerLinkActive]="['active-menu']"
+          routerLink="/profile/Y2FlYmU0YmItMTkyYi00NGQwLTljYmQtYjEyODJmNjVjZTdl.NDU3ZDU2ODUtMDQ2Ny00ZDA1LWIyM2ItOGY4MTdhZGRhNDdj">
+          <mat-icon class="icon">person</mat-icon>Aron
+        </a>
+        <a mat-list-item [routerLinkActive]="['active-menu']"
+          routerLink="/profile/N2ZkNDhiODctYjBkMy00ODVmLWFlMjktZjI1MGZlNDBiNDI3.NDU3ZDU2ODUtMDQ2Ny00ZDA1LWIyM2ItOGY4MTdhZGRhNDdj">
+          <mat-icon class="icon">person</mat-icon>Yanny
         </a>
         <a mat-list-item [routerLinkActive]="['active-menu']"
           routerLink="/tasks">
