--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         </a>
         <a mat-list-item [routerLinkActive]="['active-menu']"
           routerLink="/profile/">
-          <mat-icon class="icon">person</mat-icon>Ge
+          <mat-icon class="icon">person</mat-icon>Profile
         </a>
         <a mat-list-item [routerLinkActive]="['active-menu']"
           routerLink="/profile/Y2FlYmU0YmItMTkyYi00NGQwLTljYmQtYjEyODJmNjVjZTdl.NDU3ZDU2ODUtMDQ2Ny00ZDA1LWIyM2ItOGY4MTdhZGRhNDdj">
