Material Design GIX Resource example

--- a/src/app/ui/home-page/home-page.component.html
+++ b/src/app/ui/home-page/home-page.component.html
@@ -6,6 +6,7 @@
 <p>I am a Progressive Web App (PWA) built with Angular and Firebase.</p>
 
 <h2>Have Questions?</h2>
+ 
 
 <p>
     <i class="fa fa-slack fa-lg"></i> Let's talk on the <a target="blank" href="https://goo.gl/qF8Q5r">
@@ -18,3 +19,7 @@
 <p>
     <i class="fa fa-youtube fa-lg"></i> Subscribe to the <a href="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA">AngularFirebase YouTube Channel</a> for weekly lessons.
 </p>
+
+
+<!-- GIX Material Design Sampling-->
+<gix-mdc-samples></gix-mdc-samples>
