added gixng-button sample

--- a/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
+++ b/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
@@ -12,6 +12,20 @@
   <button mat-raised-button disabled>Disabled</button>
   <a mat-raised-button routerLink=".">Link</a>
 </div>
+<hr>
+
+<button mat-raised-button [color]="color"  class="gix-button-shadow gix-cornecto-button">  
+    <mat-icon>add</mat-icon>  
+     <span class="gix-button-cornecto-label">Create</span>
+</button>
+
+<button mat-raised-button color="primary"  class="gix-button-shadow gix-cornecto-button">  
+    <mat-icon>dashboard</mat-icon>  
+     <span class="gix-button-cornecto-label">Dashboard</span>
+</button>
+
+
+<hr>
 <h3>Icons</h3>
 <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
 <mat-icon aria-hidden="false" aria-label="Example add icon">add</mat-icon>
