--- a/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
+++ b/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
@@ -1,6 +1,6 @@
 
 <hr>
-<h1>GIX Angular Fire</h1>
+<h1>GIX Angular Fire - Adding-on</h1>
 <h2>Includes Angular Material Design </h2>
 <h6>see: src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html</h6>
 <h3>Raised Buttons</h3>
@@ -26,7 +26,7 @@
 
 
 <hr>
-<h3>Icons</h3>
+<h3>Material Design Icons</h3>
 <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
 <mat-icon aria-hidden="false" aria-label="Example add icon">add</mat-icon>
 <mat-icon aria-hidden="false" aria-label="Example zoom_in
@@ -60,7 +60,7 @@ icon">turned_in_not
 </ul>
 
 <hr>
-<h2>Font Awesome</h2>
+<h2>Font Awesome Icons</h2>
 <pre>
 
   &lt;i 
