Notification upgraded to Toasting Service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
         </aside>
 
         <main class="column is-8">
-            <notification-message></notification-message>
+           
+          <notification-toaster></notification-toaster>
           
             <router-outlet></router-outlet>
         </main>
