--- a/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.scss
+++ b/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.scss
@@ -47,3 +47,20 @@
        border-bottom-left-radius: 12px;
        margin-right: 24px;
    }
+
+
+   //TOAST
+   :host ::ng-deep button {
+      margin-right: .25em;
+  }
+
+  :host ::ng-deep .custom-toast .ui-toast-message {
+      color: #ffffff;
+      background: #FC466B;
+      background: -webkit-linear-gradient(to right, #3F5EFB, #FC466B);
+      background: linear-gradient(to right, #3F5EFB, #FC466B);
+  }
+
+  :host ::ng-deep .custom-toast .ui-toast-close-icon {
+      color: #ffffff;
+  }
