--- a/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
+++ b/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
@@ -14,7 +14,9 @@
 </div>
 <hr>
 
-<button mat-raised-button [color]="color"  class="gix-button-shadow gix-cornecto-button">  
+<button mat-raised-button [color]="color"  class="gix-button-shadow gix-cornecto-button"
+(click)="showNotification('creating clicked')"
+>  
     <mat-icon>add</mat-icon>  
      <span class="gix-button-cornecto-label">Create</span>
 </button>
@@ -107,3 +109,12 @@ icon">turned_in_not
 &nbsp;
 <i class="fas fa-terminal"></i>
 &nbsp;
+
+<h2>Toast Notifications</h2>
+
+<h3 class="first">Severities</h3>
+<button type="button" pButton (click)="showSuccess()" label="Success" class="ui-button-success"></button>
+<button type="button" pButton (click)="showInfo()" label="Info" class="ui-button-info"></button>
+<button type="button" pButton (click)="showWarn()" label="Warn" class="ui-button-warning"></button>
+<p-button   (click)="showWarnSticky()" label="Warn Sticky" class="ui-button-warning"></p-button>
+<button type="button" pButton (click)="showError()" label="Error" class="ui-button-danger"></button>
