--- a/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
+++ b/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
@@ -13,13 +13,13 @@
 </div>
 <hr>
 
-<button mat-raised-button [color]="color" class="gix-button-shadow gix-cornecto-button"
+<button mat-raised-button color="primary" class="gix-button-shadow gix-cornecto-button"
   (click)="showNotification('creating clicked')">
   <mat-icon>add</mat-icon>
   <span class="gix-button-cornecto-label">Create</span>
 </button>
 
-<button mat-raised-button color="primary" class="gix-button-shadow gix-cornecto-button">
+<button mat-raised-button color="secondary" class="gix-button-shadow gix-cornecto-button">
   <mat-icon>dashboard</mat-icon>
   <span class="gix-button-cornecto-label">Dashboard</span>
 </button>
