--- a/src/app/ui/notification-message/notification-message.component.html
+++ b/src/app/ui/notification-message/notification-message.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="notify.msg | async as msg" class="notification"
+<!-- <div *ngIf="notify.msg | async as msg" class="notification"
   [ngClass]="{ 
     'is-danger': msg.style == 'error',
     'is-success': msg.style == 'success',
@@ -6,4 +6,4 @@
   }">
   <button class="delete" (click)="notify.clear()"></button>
   {{ msg.content }}
-</div>
+</div> -->
