doc: Docker script

--- a/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
+++ b/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
@@ -1,5 +1,5 @@
 <hr>
-<h1>GIX Angular Fire - Adding-on</h1>
+<h1>GIX's Angular FireStarter - Adding-on</h1>
 <h2>Includes Angular Material Design </h2>
 <h6>see: src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html</h6>
 <h3>Raised Buttons</h3>
