--- a/src/app/ui/home-page/home-page.component.html
+++ b/src/app/ui/home-page/home-page.component.html
@@ -1,23 +1,29 @@
-<h1>Welcome to Firestarter</h1>
+<h1>Welcome to FirePriming</h1>
+<img src="../../../assets/images/angular-250x.png" class="primeng-logo">
+<img src="../../../assets/images/primeng.png" class="primeng-logo">
+<img src="../../../assets/images/firebase.png" class="primeng-logo">
+<img src="../../../assets/images/angularfirebase.png" class="primeng-logo">
+<img src="../../../assets/images/angular-material.png" class="primeng-logo">
 
-<a href="https://slackin-pbfjhfxnsa.now.sh"><img src="https://slackin-pbfjhfxnsa.now.sh/badge.svg"></a><br>
-<a href="https://circleci.com/gh/codediodeio/angular-firestarter"><img src="https://circleci.com/gh/codediodeio/angular-firestarter.svg?style=svg"></a>
+<!-- <a href="https://slackin-pbfjhfxnsa.now.sh"><img src="https://slackin-pbfjhfxnsa.now.sh/badge.svg"></a><br>
+<a href="https://circleci.com/gh/codediodeio/angular-firestarter"><img src="https://circleci.com/gh/codediodeio/angular-firestarter.svg?style=svg"></a> -->
 
-<p>I am a Progressive Web App (PWA) built with Angular and Firebase.</p>
+<p>An Angular Starter kit featuring : Notification Toasting using PrimeNG, Login in using Firebase, Layout+style+coloring using Angular Material Design and more.</p>
 
 <h2>Have Questions?</h2>
  
 
 <p>
-    <i class="fa fa-slack fa-lg"></i> Let's talk on the <a target="blank" href="https://goo.gl/qF8Q5r">
-  Angular Firebase Developers Slack Team
+    <i class="fa fa-slack fa-lg"></i> Let's talk on the <a target="blank" href="http://guillaumeisabelle.com/r/firepriming/discuss" target="_blank">
+  Angular FirePriming Discution area (presently on the GitHub repo)
 </a>
 </p>
 
-<h2>Free Open Source Screencasts</h2>
+<h2>Might like the Free Open Source Screencasts</h2>
+<h3>As FirePriming StarterKit is derived from Firestarter, you might find interesting stuff above the author has created</h3>
 
 <p>
-    <i class="fa fa-youtube fa-lg"></i> Subscribe to the <a href="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA">AngularFirebase YouTube Channel</a> for weekly lessons.
+    <i class="fa fa-youtube fa-lg"></i> Subscribe to the <a href="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA" target="_blank">AngularFirebase YouTube Channel</a> for weekly lessons.
 </p>
 
 
