--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -25,6 +25,7 @@
             <a class="navbar-item" routerLink="/uploads">
         File Uploads
       </a>
+      &nbsp;&nbsp;&nbsp;
         </div>
     </div>
 </nav>
