--- a/src/app/ui/user-login/user-login.component.html
+++ b/src/app/ui/user-login/user-login.component.html
@@ -14,7 +14,7 @@
       <i class="fa fa-google fa-lg"></i> Connect Google
     </button>
 
-    <button (click)="signInWithGithub()" class="button btn-social btn-github" disabled>
+    <button (click)="signInWithGithub()" class="button btn-social btn-github" >
       <i class="fa fa-github fa-lg"></i> Connect GitHub
     </button>
 
