failed dialog using MDC GixMdcSamplesComponent.html:67 ERROR Error: No component factory found for GixDialogSampleComponent. Did you add it to @NgModule.entryComponents?     at noComponentFactoryError (core.js:9877)     at CodegenComponentFactoryResolver.push../node_modules/@angular/core/fesm5/core.js.CodegenComponentFactoryResolver.resolveComponentFactory (core.js:9915)     at CdkPortalOutlet.push../node_modules/@angular/cdk/esm5/portal.es5.js.CdkPortalOutlet.attachComponentPortal (portal.es5.js:654)     at MatDialogContainer.push../node_modules/@angular/material/esm5/dialog.es5.js.MatDialogContainer.attachComponentPortal (dialog.es5.js:195)     at MatDialog.push../node_modules/@angular/material/esm5/dialog.es5.js.MatDialog._attachDialogContent (dialog.es5.js:1046)     at MatDialog.push../node_modules/@angular/material/esm5/dialog.es5.js.MatDialog.open (dialog.es5.js:850)     at GixMdcSamplesComponent.push../src/app/gix/gix-mdc-samples/gix-mdc-samples.component.ts.GixMdcSamplesComponent.openDialog (gix-mdc-samples.component.ts:24)     at Object.eval [as handleEvent] (GixMdcSamplesComponent.html:68)     at handleEvent (core.js:23107)     at callWithDebugContext (core.js:24177)

--- a/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
+++ b/src/app/gix/gix-mdc-samples/gix-mdc-samples.component.html
@@ -60,6 +60,18 @@
   <hr>
   
   
+  <h2>Dialogs</h2>
+  
+  
+
+  <button mat-raised-button color="primary" class="gix-button-shadow gix-cornecto-button"
+  (click)="openDialog()"
+  matTooltip="Opens a dialog showing up a component within it"
+  aria-label="Opens a dialog showing up a component within it">
+  <mat-icon>add</mat-icon>
+  <span class="gix-button-cornecto-label">Show Component Dialog</span>
+</button>
+
   
 <hr>
 <br>
