fix: minor bug fixes and updates

--- a/src/app/customers/list-page/list-page.component.html
+++ b/src/app/customers/list-page/list-page.component.html
@@ -3,7 +3,7 @@
 <mat-nav-list role="list">
     <h3 mat-subheader>Customers (Fake Data)</h3>
 
-    <mat-list-item *ngFor="let cust of data.customers" [routerLink]="cust.id" [state]="{ data: cust }" role="listitem">
+    <mat-list-item *ngFor="let cust of data.customers" [routerLink]="cust.id" role="listitem">
         <mat-icon mat-list-icon>account_box</mat-icon>
         <h3>{{ cust.name }}</h3>
     </mat-list-item>
