--- a/src/app/shared/shell/shell.component.html
+++ b/src/app/shared/shell/shell.component.html
@@ -57,7 +57,7 @@
           <span>Full Course on Fireship</span>
         </a>
 
-        <a mat-menu-item routerLink="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA">
+        <a mat-menu-item href="https://www.youtube.com/channel/UCsBjURrPoezykLs9EqgamOA">
           <i>📺</i>
           <span>Watch on the YouTube</span>
         </a>
