update: home page links

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,11 +2,11 @@
 <header>
     <h1>Angular Firestarter</h1>
 
-    <iframe src="https://player.vimeo.com/video/358113133?color=ff9933&title=0&byline=0&portrait=0" width="640" height="361" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/359329279?color=ff9933&title=0&byline=0&portrait=0" width="640" height="361" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/OWy0e231eMI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
     <p>
-        <a mat-raised-button color="accent" style="margin-right: 10px;" href="https://fireship.io/courses" target="blank">Build this App</a>
+        <a mat-raised-button color="accent" style="margin-right: 10px;" href="https://fireship.io/courses/angular" target="blank">Build this App</a>
         <a mat-raised-button href="https://github.com/codediodeio/angular-firestarter" target="blank">Source</a>
     </p>
 
